[package]
name = "x79d8"
version = "0.2.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "GPL-2.0-only"
description = "Serve encrypted files via local FTP."
repository = "https://github.com/quark-zju/x79d8"


[dependencies]
aes = "0.6"
async-trait = "0.1"
bincode = "1"
blake2 = "0.9"
block-modes = "0.7"
cfb-mode = "0.6"
structopt = "0.3"
env_logger = "0.8"
fs2 = "0.4"
hex = "0.4"
libunftp = { version = "0.14" }
log = "0.4"
memmap = "0.7"
minibytes = { package = "esl01-minibytes", version = "0.2" }
once_cell = "1"
parking_lot = "0.11"
rand = "0.7"
rand_chacha = "0.2"
rpassword = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scrypt = "0.5"
slog-stdlog = "4" 
slog = "2"
tempfile = "3"
tokio = { version = "0.3", features = ["full"] }
