[package]
name = "x79d8"
version = "0.2.1"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "GPL-2.0-only"
description = "Serve encrypted files via local FTP."
repository = "https://github.com/quark-zju/x79d8"


[dependencies]
aes = "0.8"
async-trait = "0.1"
bincode = "1"
blake2 = "0.10"
block-modes = "0.9"
cfb-mode = "0.8"
structopt = "0.3"
env_logger = { version = "0.11", default-features = false }
fs2 = "0.4"
hex = "0.4"
libunftp = { version = "0.17" }
log = "0.4"
memmap = { package = "memmap2", version = "0.5" }
minibytes = { package = "sapling-minibytes", version = "0.1", features = ["frommmap"], default-features = false }
parking_lot = "0.12"
rand = "0.9"
rand_chacha = "0.9"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scrypt = "0.11"
slog-stdlog = "4" 
slog = "2"
tempfile = "3"
tokio = { version = "1.4", features = ["full"] }
